--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.883.0",
+    "@aws-sdk/client-sesv2": "^3.883.0",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
